# can-id-scanner

./: .cookiecutter.json  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  data.txt  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/alphagenie/: __init__.py  __main__.py
src/can_id_scanner/: __init__.py  barcode.py  browser.py  common.py  list_devices.py  pdf417dict.py  scanner.py  speech.py
tests/: __init__.py  test_browser.py  test_main.py  test_sound.py
