[tool.poetry]
name = "can-id-scanner"
version = "0.0.0"
description = "CAN ID Scanner"
authors = ["Matias Kotlik <mdkotlik@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/qmatias/can-id-scanner"
repository = "https://github.com/qmatias/can-id-scanner"
documentation = "https://can-id-scanner.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/qmatias/can-id-scanner/releases"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
loguru = "^0.7.0"
tqdm = "^4.65.0"
icecream = "^2.1.3"
typer = { extras = ["all"], version = "^0.9.0" }
opencv-python = "^4.8.0.74"
zxing-cpp = "^2.1.0"
pillow = "^10.0.0"
selenium = "^4.10.0"
pydantic-settings = "^2.0.1"
gtts = "^2.3.2"
playsound = "^1.3.0"
pyobjc = { version = "^9.2", platform = "darwin" }


[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
pyinstaller = "^5.13.0"

[tool.poetry.scripts]
scanner = "can_id_scanner.scanner:app"
list_devices = "can_id_scanner.list_devices:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["can_id_scanner", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
